[gd_scene load_steps=9 format=3 uid="uid://c3tl5pnt1bbg1"]

[ext_resource type="PackedScene" uid="uid://dnxx3v8du1h2" path="res://player.tscn" id="1_8ra5a"]
[ext_resource type="Script" path="res://game.gd" id="1_prjay"]
[ext_resource type="PackedScene" uid="uid://whvw7c0bybm1" path="res://tree.tscn" id="2_06l4a"]
[ext_resource type="PackedScene" uid="uid://d0fqd1xk4tes0" path="res://pickup_gun.tscn" id="5_c8x0n"]
[ext_resource type="PackedScene" uid="uid://fv4vyhi16tdl" path="res://timer.tscn" id="5_j5qhv"]

[sub_resource type="LabelSettings" id="LabelSettings_f3n07"]
line_spacing = 40.0
font_size = 120

[sub_resource type="LabelSettings" id="LabelSettings_16tit"]
font_size = 52
font_color = Color(0.0235294, 0.113725, 0.329412, 1)

[sub_resource type="Curve2D" id="Curve2D_532bo"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -739, -184, 0, 0, 0, 0, 1998, -189, 0, 0, 0, 0, 2061, 1242, 0, 0, 0, 0, -731, 1230, 0, 0, 0, 0, -749, 438, 0, 0, 0, 0, -739, -184)
}
point_count = 6

[node name="Game" type="Node2D"]
position = Vector2(387, 30)
script = ExtResource("1_prjay")

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
offset_right = 2396.0
offset_bottom = 1222.0
color = Color(0, 0, 0, 0.501961)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -110.0
offset_right = 255.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
text = "Game over :/"
label_settings = SubResource("LabelSettings_f3n07")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_bottom = 0.255556
offset_top = -1.0
offset_right = 2293.0
offset_bottom = 866.0
metadata/_edit_use_anchors_ = true

[node name="timer" parent="CanvasLayer" instance=ExtResource("5_j5qhv")]

[node name="Label" type="Label" parent="CanvasLayer/timer"]
offset_right = 40.0
offset_bottom = 23.0
text = "Wie Lange kannst du Ã¼berleben?"
label_settings = SubResource("LabelSettings_16tit")

[node name="player" parent="." instance=ExtResource("1_8ra5a")]
unique_name_in_owner = true
position = Vector2(184, 288)

[node name="Path2D" type="Path2D" parent="player"]
position = Vector2(-184, -288)
curve = SubResource("Curve2D_532bo")

[node name="PathFollow2D" type="PathFollow2D" parent="player/Path2D"]
unique_name_in_owner = true
position = Vector2(-739, -184)
rotation = -0.00182682

[node name="tree" parent="." instance=ExtResource("2_06l4a")]
position = Vector2(-153, 187)

[node name="tree2" parent="." instance=ExtResource("2_06l4a")]
position = Vector2(154, 611)

[node name="tree3" parent="." instance=ExtResource("2_06l4a")]
position = Vector2(1203, 75)

[node name="tree4" parent="." instance=ExtResource("2_06l4a")]
position = Vector2(1137, 602)

[node name="tree5" parent="." instance=ExtResource("2_06l4a")]
position = Vector2(1717, 472)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="pickupArea" parent="." instance=ExtResource("5_c8x0n")]
position = Vector2(735, 738)

[node name="item_spawner" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="tree_spawner" type="Timer" parent="."]
autostart = true

[connection signal="camera_moved" from="player" to="." method="_on_player_camera_moved"]
[connection signal="player_died" from="player" to="." method="_on_player_player_died"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="item_spawner" to="." method="_on_item_spawner_timeout"]
[connection signal="timeout" from="tree_spawner" to="." method="_on_tree_spawner_timeout"]
